--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="ingredients_key">ingredients key</string>
+    <string name="title">Baking App</string>
+    <string name="recipe">Recipe</string>
+    <string name="recipe_instruction">0 Recipe Introduction</string>
+    <string name="my_title">Nutella Pie</string>
 </resources>
